- disabled the .valign-stretch class that was causing the cards on the front page to not work correctly on smaller screens

--- a/css/materializeplus.css
+++ b/css/materializeplus.css
@@ -17,8 +17,9 @@ main {
 }
 
 .valign-stretch {
-    display: flex;
-    align-items: flex-start;
+    /*TODO: use this class to properly stretch the cards on the first page to always be the same height*/
+    /*display: flex;*/
+    /*align-items: flex-start;*/
 }
 
 .page-footer {
